--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -1,1 +1,15 @@
-<p>markers-page works!</p>
+<div id="map" #map></div>
+
+<ul class="list-group">
+  <li *ngFor="let marker of markers; let i = index"
+      [ngStyle]="{backgroundColor: marker.color}"
+      (click)="flyTo(marker.marker)"
+      (dblclick)="deleteMarker(i)" class="list-group-item"
+  >
+    Marker {{ i + 1 }}
+  </li>
+</ul>
+
+<button (click)="createMarker()" class="btn btn-primary">
+  + Agregar marcador
+</button>
