--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-3">
+<div class="row mt-3 container">
   <div class="col-2"></div>
   <div class="col">
     <h3>Listado de propiedades</h3>
@@ -6,14 +6,13 @@
   </div>
 </div>
 
-<div class="row mt-2">
+<div class="row mt-2 container">
   <div class="col-2"></div>
   <div class="col">
     <div class="row">
       <!-- Houses -->
       <div *ngFor="let house of houses" class="col-4 mb-2">
         <div class="card">
-          <!--<img src="..." class="card-img-top">-->
           <app-mini-map [lngLat]="house.lngLat"/>
 
           <div class="card-body">
@@ -21,6 +20,9 @@
             <p class="card-text">{{ house.description }}</p>
           </div>
         </div>
+      </div>
+      <div class="col-4 mb-2">
+        <app-counter-alone/>
       </div>
     </div>
   </div>
